--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  window_manager: ^0.3.2
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
+  flutter_riverpod: ^2.3.6
+  build_runner: ^2.3.3
+  reorderables: ^0.6.0
 
 dev_dependencies:
   flutter_test:
