--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_riverpod: ^2.3.6
   build_runner: ^2.3.3
   reorderables: ^0.6.0
+  url_launcher: ^6.1.10
+  open_file: ^3.3.1
 
 dev_dependencies:
   flutter_test:
